$Id: ChangeLog,v 1.4 2007-12-03 21:43:24 karl Exp $

2007-12-03 karl
    * Make sure tcllauncher gets installed into the bin directory.

2007-11-24 karl
    * When allocating memory to fiddle command line arguments before
      invoking Tcl_Main, use malloc instead of ckalloc because whatever
      ckalloc needs hasn't necessarily been initialized yet.

    * Using $(COMPILE) instead of $(CC) for compiling the main routine
      makes it work on FreeBSD as well as the Mac.

2007-10-19 karl
    * Changes to tcllauncher.tcl make it actually do what it's supposed
      to do.